--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,15 @@
 <h1>Question: <%= @question.name %></h1>
 <h2>Survey: <%= @survey.name %></h2>
+<h3>Answer1: <%= @question.answer1 %></h3>
+<h3>Answer2: <%= @question.answer2%></h3>
+<%# 
+<div class="form_row">
+    <label for="">Theme:</label>
+    <% [ 'plain', 'desert', 'green', 'corporate', 'funky' ].each do |theme| %>
+      <%# <br><%= radio_button_tag 'theme', theme, @theme == theme %> 
+      <%# <%= theme.humanize %> 
+    <%# <% end %>
+<%# </div>  %>
 
 
 <p><%= link_to "Edit question", edit_survey_question_path(@survey, @question) %></p>
